# pytorch-intermediate-layers

./: .gitignore  pyproject.toml
pytorch_intermediate_layers/: __init__.py  intermediate_feature_module.py  recursive_getattr.py
tests/: test_intermediate_feature_module.py  test_recursive_getattr.py
